--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -18,7 +18,7 @@ jobs:
         path: zipper
 
     - name: Android kernel build
-      uses: lemniskett/android-kernel-actions@master
+      uses: Abdelhay-Ali/android-kernel-actions-0.4.0@main
       id: build
       env:
         NAME: Dark-Ages-Último
