--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -19,7 +19,7 @@ jobs:
         path: zipper
 
     - name: Android kernel build
-      uses: Abdelhay-Ali/android-kernel-actions-0.4.0@main
+      uses: lemniskett/android-kernel-actions@v0.4.0
       id: build
       env:
         NAME: Dark-Ages-Último
