--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -9,6 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
     - name: Checkout kernel source
       uses: actions/checkout@v2
 
