--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -1,9 +1,9 @@
 name: Build Kernel
 
 on:
-  push:
-    branches: master
-    workflow_dispatch:
+  watch:
+    types: [started]
+  workflow_dispatch:
  
 jobs:
   build:
@@ -34,3 +34,5 @@ jobs:
       with:
         artifacts: ${{ steps.build.outputs.outfile }}
         token: ${{ secrets.GITHUB_TOKEN }}
+        allowUpdates: true
+        tag: 1
