--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -9,14 +9,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout kernel source
-      uses: actions/checkout@v2
+    #- name: Checkout kernel source
+     # uses: actions/checkout@v2
 
-    - name: Checkout zipper
-      uses: actions/checkout@v2
-      with:
-        repository: lemniskett/AnyKernel3
-        path: zipper
+   # - name: Checkout zipper
+    #  uses: actions/checkout@v2
+     # with:
+      #  repository: lemniskett/AnyKernel3
+       # path: zipper
 
     - name: Android kernel build
       uses: Abdelhay-Ali/android-kernel-actions@master 
