--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -30,12 +30,21 @@ jobs:
         compiler: gcc/9
         defconfig: phenix_defconfig
         image: Image.gz-dtb
+   
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d-%I%M')"
+
+    - name: Tag snapshot
+      uses: tvdias/github-tagger@v0.0.1
+      with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ steps.date.outputs.date }}
 
     - name: Release build
       uses: ncipollo/release-action@v1
       with:
         artifacts: ${{ steps.build.outputs.outfile }}
-        #artifacts: "kernel_huawei_hi6250_4.9.319/artifacts/${{ steps.build.outputs.outfile }}"
         token: ${{ secrets.GITHUB_TOKEN }}
         allowUpdates: true
-        tag: Kernel_4.9.319
+        tag: ${{ steps.date.outputs.date }}
